--- a/css/articles.css
+++ b/css/articles.css
@@ -1,84 +1,84 @@
 .disable {
     opacity: 0.3;
 }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial Narrow Bold', sans-serif;
+}
 
-/* <!--Header--> */
+body {
+    min-height: 100vh;
+    background-color: #ffffff;
+}
 
-#fullscreen {
-    display: none;
+header {
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
-    margin: 0 auto;
-    height: 80px;
-    z-index: 9998;
+    padding: 32px 120px 16px 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 10000;
 }
 
-#full {
-    width: 1140px;
-    position: relative;
-    top: 0;
-    margin: 0 auto;
-    z-index: 9997;
-}
-
-
-header .logo > a {
-    display: block;
-    width: 120px;
-    height: 0;
-    overflow: hidden;
-    padding-top: 80px;
-    background: url(../img/libracelia.png) 0 no-repeat;
-    background-size: 90%;
-    padding-right: 40px;
-    border-bottom: 1px solid #f1f1f1;
-    float: left;
-}
-
-ul.header-nav {
-    width: 60%;
-    float: left;
-}
-
-header li {
+header .logo {
+    color: #030B24;
+    font-size: 24px;
+    font-weight: bolder;
     text-transform: uppercase;
-    list-style-type: none;
-    margin: 0 auto;
-    float: left;
 }
 
-header li > a {
-    font-size: 13px;
-    color: #000;
-    padding-right: 20px;
-    padding-left: 20px;
-    font-weight: 800;
-    line-height: 80px;
-    display: inline-block;
-    border-bottom: 0;
+header ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.menu-index {
-    position: fixed;
-    right: 5%;
-    top: 30px;
-    z-index: 99999;
-    padding: 20px;
-    background: black;
-    cursor: pointer;
+header ul li {
+    margin: 18px 8px;
 }
 
-.menu-index i {
-    float: right;
-    font-size: 18px;
-    color: white;
-    padding-right: 0px !important;
+header ul li a {
+    padding: 6px 16px;
+    color: #030B24;
+    font-size: 14px;
+    font-weight: lighter;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border-radius: 20px;
 }
 
-.clear {
-    clear: both;
+header ul li a:hover {
+    background: rgba(255, 255, 255, 0.24);
+    ;
+    color: #030B24;
 }
+
+header ul li a.active {
+    background: #030B24;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 120px;
+}
+
+.content {
+    position: relative;
+    padding: 30px 0px;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}   
+
 
 
 /* <!--Content--> */
@@ -87,15 +87,13 @@ header li > a {
     width: 100%;
 }
 
-.content {
-    position: relative;
-    width: 1140px;
-    padding-top: 90px;
-}
+
 
 .content .text-intro {
     width: 1140px;
-    margin: 60px auto 0;
+    margin: 20px auto 20px;
+    padding-bottom: 60px;
+    border-bottom: 1px solid #E5E5E5;
 }
 
 .one-column {
