--- a/css/products.css
+++ b/css/products.css
@@ -2,105 +2,58 @@
     opacity: 0.3;
 }
 
-/* <!--Header--> */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial Narrow Bold', sans-serif;
+}
 
-#fullscreen {
-    display: none;
+body {
+    min-height: 100vh;
+    background-color: #ffffff;
+}
+
+header {
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
-    margin: 0 auto;
-    height: 80px;
-    z-index: 9998;
+    padding: 32px 120px 16px 120px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    z-index: 10000;
+    background-color: #ffffff;
 }
 
-#full {
-    width: 1140px;
-    position: relative;
-    top: 0;
-    margin: 0 auto;
-    z-index: 9997;
-}
-
-
-header .logo > a {
-    display: block;
-    width: 120px;
-    height: 0;
-    overflow: hidden;
-    padding-top: 80px;
-    background: url(../img/libracelia.png) 0 no-repeat;
-    background-size: 90%;
-    padding-right: 40px;
-    border-bottom: 1px solid #f1f1f1;
-    float: left;
-}
-
-ul.header-nav {
-    width: 60%;
-    float: left;
-}
-
-header li {
+header i {
+    color: #030B24;
+    font-size: 16px;
+    padding: 8px;
+    font-weight: bolder;
     text-transform: uppercase;
-    list-style-type: none;
-    margin: 0 auto;
-    float: left;
 }
 
-header li > a {
-    font-size: 13px;
-    color: #000;
-    padding-right: 20px;
-    padding-left: 20px;
-    font-weight: 800;
-    line-height: 80px;
-    display: inline-block;
-    border-bottom: 0;
-}
-
-.menu-index {
-    position: fixed;
-    right: 5%;
-    top: 30px;
-    z-index: 99999;
-    padding: 20px;
-    background: black;
-    cursor: pointer;
-}
-
-.menu-index i {
-    float: right;
-    font-size: 18px;
-    color: white;
-    padding-right: 0px !important;
-}
-
-.clear {
-    clear: both;
-}
 
 
 /* <!--Content--> */
 
-#ajax-content {
-    width: 100%;
-}
 
 .content {
-    position: relative;
-    width: 1140px;
-    margin: 50px auto;
-}
-
-.content .text-intro {
-    width: 1140px;
-    margin-top: 150px;
     margin: 150px auto 0;
 }
 
+.content .text-intro {
+    position: relative;
+    padding: 0px 120px 60px 120px;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
 .one-column {
-    width: 40%;
+    width: 50%;
     position: relative;
     float: left;
 }
@@ -133,7 +86,7 @@ header li > a {
 }
 
 .two-column {
-    width: 60%;
+    width: 50%;
     position: relative;
     float: left;
 }
