--- a/css/xccloud.css
+++ b/css/xccloud.css
@@ -2,83 +2,39 @@
     opacity: 0.3;
 }
 
-/* <!--Header--> */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial Narrow Bold', sans-serif;
+}
 
-#fullscreen {
-    display: none;
+body {
+    min-height: 100vh;
+    background-color: #ffffff;
+}
+
+header {
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
-    margin: 0 auto;
-    height: 80px;
-    z-index: 9998;
+    padding: 32px 120px 16px 120px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    z-index: 10000;
+    background-color: #ffffff;
 }
 
-#full {
-    width: 1140px;
-    position: relative;
-    top: 0;
-    margin: 0 auto;
-    z-index: 9997;
-}
-
-
-header .logo>a {
-    display: block;
-    width: 120px;
-    height: 0;
-    overflow: hidden;
-    padding-top: 80px;
-    background: url(../img/libracelia.png) 0 no-repeat;
-    background-size: 90%;
-    padding-right: 40px;
-    border-bottom: 1px solid #f1f1f1;
-    float: left;
-}
-
-ul.header-nav {
-    width: 60%;
-    float: left;
-}
-
-header li {
+header i {
+    color: #030B24;
+    font-size: 16px;
+    padding: 8px;
+    font-weight: bolder;
     text-transform: uppercase;
-    list-style-type: none;
-    margin: 0 auto;
-    float: left;
 }
 
-header li>a {
-    font-size: 13px;
-    color: #000;
-    padding-right: 20px;
-    padding-left: 20px;
-    font-weight: 800;
-    line-height: 80px;
-    display: inline-block;
-    border-bottom: 0;
-}
-
-.menu-index {
-    position: fixed;
-    right: 5%;
-    top: 30px;
-    z-index: 99999;
-    padding: 20px;
-    background: black;
-    cursor: pointer;
-}
-
-.menu-index i {
-    float: right;
-    font-size: 18px;
-    color: white;
-    padding-right: 0px !important;
-}
-
-.clear {
-    clear: both;
-}
 
 
 /* <!--Content--> */
@@ -147,13 +103,13 @@ header li>a {
 }
 
 .content .text-intro p {
-    font-size: 13px;
-    color: #8d8d8d;
+    font-size: 14px;
+    color: #666666;
     margin-top: 30px;
     font-weight: 400;
-    line-height: 22px;
+    line-height: 28px;
     letter-spacing: 1px;
-    /* width: 40%; */
+    width: 90%;
 }
 
 /* .two-column p {
@@ -185,12 +141,12 @@ header li>a {
 }
 
 .content .text-intro h2 {
-    font-size: 36px;
+    font-size: 28px;
     width: 60%;
     text-transform: uppercase;
     color: #000000;
     font-weight: 900;
-    line-height: 56px;
+    line-height: 36px;
 }
 
 
